@@ -1,11 +1,9 @@
 <?php
-// $Id: views_glossary.test,v 1.1.4.3 2010-02-07 10:39:53 dereine Exp $
+// $Id: views_glossary.test,v 1.1.4.4 2010-03-14 11:45:38 dereine Exp $
 /**
  * @file
  *   Test glossary view ( summary of arguments )
  */
-
-module_load_include('inc', 'views', 'tests/views_query');
 
 class ViewsGlossaryTestCase extends ViewsSqlTest {
   public static function getInfo() {
